--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -236,5 +236,24 @@ Control Room Log Edit
             $('#Lost').hide(100);
             $('#submit_button').show();
         });
+        
+        var locationOptions = {
+            url: function(phrase) {
+                    return "{{ path('location_lookup', {'location': phrase}) }}";
+            },
+
+            getValue: "location"
+        };
+        
+        var reportedOptions = {
+            url: function(phrase) {
+                    return "{{ path('reported_by_lookup', {'reported': phrase}) }}";
+            },
+
+            getValue: "reported_by"
+        };
+
+        $("#new_entry_form_location").easyAutocomplete(locationOptions);
+        $("#new_entry_form_reported_by").easyAutocomplete(reportedOptions);
     </script>        
 {% endblock %}
