--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -1,6 +1,6 @@
 {% extends 'BathSU.html.twig' %}
 {% block headerbottom %}
-Control Room Log  New Entry
+Control Room Log New Entry
 {% endblock %}
 {% block layout %}
     {% embed '3-9.html.twig' %}
@@ -95,5 +95,24 @@ Control Room Log  New Entry
             var nowTime = moment(d).format("YYYY-MM-DD HH:mm:ss");
             $('.datetimepicker1').val(nowTime);
         });
+        
+        var locationOptions = {
+            url: function(phrase) {
+                    return "{{ path('location_lookup', {'location': phrase}) }}";
+            },
+
+            getValue: "location"
+        };
+        
+        var reportedOptions = {
+            url: function(phrase) {
+                    return "{{ path('reported_by_lookup', {'reported': phrase}) }}";
+            },
+
+            getValue: "reported_by"
+        };
+
+        $("#new_entry_form_location").easyAutocomplete(locationOptions);
+        $("#new_entry_form_reported_by").easyAutocomplete(reportedOptions);
     </script>        
 {% endblock %}
