--- a/app/Resources/views/form.html.twig
+++ b/app/Resources/views/form.html.twig
@@ -97,12 +97,12 @@ Control Room Log New Entry
         });
         $(document).ready(function(){
             var locationOptions = {
-                url: function(phrase) {return "{{ path('location_lookup')}}/" + phrase;},
+                url: function(phrase) {return "{{ path('location_lookup', {'location': phrase}) }}";},
                 getValue: "location"
             };
 
             var reportedOptions = {
-                url: function(phrase) {return "{{ path('reported_by_lookup')}}/"+phrase;},
+                url: function(phrase) {return "{{ path('reported_by_lookup', {'reported': phrase}) }}";},
                 getValue: "reported_by"
             };
 
