debugging lookup response

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -239,8 +239,7 @@ Control Room Log Edit
         
         var locationOptions = {
             url: function(phrase) {
-                    //return "{{ path('location_lookup', {'location': phrase}) }}"+ phrase;
-                    return "/entry/lookup/location/test";
+                    return "{{ path('location_lookup', {'location': phrase}) }}";
             },
 
             getValue: "location"
@@ -248,8 +247,7 @@ Control Room Log Edit
         
         var reportedOptions = {
             url: function(phrase) {
-                    //return "{{ path('reported_by_lookup', {'reported': phrase}) }}"+ phrase;
-                    return "/entry/lookup/reported_by/test";
+                    return "{{ path('reported_by_lookup', {'reported': phrase}) }}";
             },
 
             getValue: "reported_by"
