Limitting and sorting lists

--- a/app/Resources/views/editForm.html.twig
+++ b/app/Resources/views/editForm.html.twig
@@ -241,8 +241,13 @@ Control Room Log Edit
             url: function(phrase) {
                     return "{{ path('location_lookup', {'location': phrase}) }}";
             },
-
-            getValue: "location"
+            getValue: "location",
+            list: {
+                maxNumberOfElements: 5,
+		match: {
+			enabled: true
+		}
+            }
         };
         
         var reportedOptions = {
@@ -250,7 +255,13 @@ Control Room Log Edit
                     return "{{ path('reported_by_lookup', {'reported': phrase}) }}";
             },
 
-            getValue: "reported_by"
+            getValue: "reported_by",
+            list: {
+		maxNumberOfElements: 5,
+		match: {
+			enabled: true
+		}
+            }
         };
 
         $("#new_entry_form_location").easyAutocomplete(locationOptions);
