--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -57,7 +57,7 @@
 {% else %}
 <strong>Not assigned to an active event</strong>
 {% endif %}
-{% if is_granted('ROLE_USER') %}
+{% if is_granted('ROLE_VIEW') %}
 <div class="row">
     <h4>Status</h4>
 </div>
