--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -84,10 +84,10 @@
         </div>
         <div class="col-md-3">
             {% if app.user %}
-                <h1>
+                <h4>
                     <div id="HeaderWeather">
                     </div>
-                </h1>
+                </h4>
             {% endif %}
         </div>
         <div class="col-md-4">
@@ -140,7 +140,7 @@
         
         function updateWeather ( )
             {
-                $("#HeaderClock").html("WEATHER");
+                $("#HeaderWeather").html("WEATHER");
             }
         $(document).ready(function()
         {
