--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -14,8 +14,11 @@
                 <small>
                     {% block headerbottom %}{% endblock %}
                 </small>
-        </h1>    
-            {% if app.user %}
+        </h1>
+                <h1 class="pull-right"> 
+                    <div id="HeaderWeather">
+                    </div>
+                </h1>
                 <h1 class="pull-right"> 
                     <div id="HeaderClock">
                     </div>
