--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -15,6 +15,7 @@
                     {% block headerbottom %}{% endblock %}
                 </small>
         </h1>
+            {% if app.user %}
                 <h1 class="pull-right"> 
                     <div id="HeaderWeather">
                     </div>
