--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -16,14 +16,14 @@
                 </small>
         </h1>
             {% if app.user %}
+                <h4 class="container"> 
+                    <div id="HeaderWeather">
+                    </div>
+                </h4>
                 <h1 class="pull-right"> 
                     <div id="HeaderClock">
                     </div>
                 </h1>
-                <h4 class="pull-right"> 
-                    <div id="HeaderWeather">
-                    </div>
-                </h4>
             {% endif %}
         <div class="clearfix" style="background-color: #FFFFFF;"></div>
     </div>
