--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -16,14 +16,16 @@
                 </small>
         </h1>
             {% if app.user %}
-                <h4 class="container"> 
-                    <div id="HeaderWeather">
-                    </div>
-                </h4>
-                <h1 class="pull-right"> 
-                    <div id="HeaderClock">
-                    </div>
-                </h1>
+                <div class="pull-right">
+                    <h4 class="pull-left">
+                        <div id="HeaderWeather">
+                        </div>
+                    </h4>
+                    <h1 class="pull-right"> 
+                        <div id="HeaderClock">
+                        </div>
+                    </h1>
+                </div>
             {% endif %}
         <div class="clearfix" style="background-color: #FFFFFF;"></div>
     </div>
