--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -17,11 +17,11 @@
         </h1>
             {% if app.user %}
                 <div class="pull-right">
-                    <h4 class="pull-left col-md-4">
+                    <h4 class="col-md-4">
                         <div id="HeaderWeather">
                         </div>
                     </h4>
-                    <h1 class="pull-right col-md-6 col-md-offset-2"> 
+                    <h1 class="col-md-7 col-md-offset-1"> 
                         <div id="HeaderClock">
                         </div>
                     </h1>
