--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -16,16 +16,14 @@
                 </small>
         </h1>
             {% if app.user %}
-                <div class="pull-right">
-                    <h4 class="col-md-4">
+                    <h4>
                         <div id="HeaderWeather">
                         </div>
                     </h4>
-                    <h1 class="col-md-7 col-md-offset-1"> 
+                    <h1 class="pull-right"> 
                         <div id="HeaderClock">
                         </div>
                     </h1>
-                </div>
             {% endif %}
         <div class="clearfix" style="background-color: #FFFFFF;"></div>
     </div>
