--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -17,7 +17,7 @@
         </h1>
         {% if app.user %}
             <h4 class="pull-left">
-                <div id="HeaderWeather">
+                <div id="HeaderWeather" class="col-md-6 col-md-offset-2">
                 </div>
             </h4>
             <h1 class="pull-right"> 
