--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -16,8 +16,8 @@
                 </small>
         </h1>
         {% if app.user %}
-            <h4 class="pull-left">
-                <div id="HeaderWeather" class="col-md-6 col-md-offset-2">
+            <h4 class="centre-block">
+                <div id="HeaderWeather">
                 </div>
             </h4>
             <h1 class="pull-right"> 
