--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -16,15 +16,16 @@
                 </small>
         </h1>
         {% if app.user %}
-            
-            <h1 class="pull-right"> 
+            <div class="pull-right">
                 <h4>
                     <div id="HeaderWeather">
                     </div>
                 </h4>
-                <div id="HeaderClock">
-                </div>
-            </h1>
+                <h1>
+                    <div id="HeaderClock">
+                    </div>
+                </h1>
+            </div>
         {% endif %}
         <div class="clearfix" style="background-color: #FFFFFF;"></div>
     </div>
