--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -16,12 +16,12 @@
                 </small>
         </h1>
         {% if app.user %}
-            <div class="pull-right">
-                <h4>
+            <div class="row pull-right">
+                <h4 class="col-md-4">
                     <div id="HeaderWeather">
                     </div>
                 </h4>
-                <h1>
+                <h1 class="col-md-6 col-md-offset-2">
                     <div id="HeaderClock">
                     </div>
                 </h1>
