--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -16,7 +16,7 @@
                 </small>
         </h1>
         {% if app.user %}
-            <div class="row pull-right">
+            <div class="row">
                 <h4 class="col-md-4">
                     <div id="HeaderWeather">
                     </div>
