--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -18,11 +18,11 @@
         {% if app.user %}
             <div class="row">
                 <h4 class="col-md-4">
-                    <div id="HeaderWeather">
+                    <div id="HeaderWeather" class="pull-left">
                     </div>
                 </h4>
-                <h1 class="col-md-6 col-md-offset-2 pull-right">
-                    <div id="HeaderClock">
+                <h1 class="col-md-6 col-md-offset-2">
+                    <div id="HeaderClock" class="pull-right">
                     </div>
                 </h1>
             </div>
