--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -9,14 +9,14 @@
     </head>
 <body class="{% block theme %}default{% endblock %}">
     <div class="page-header">
-        <h1 class="pull-left">
+        <div class="row">
+            <h1 class="pull-left">
                 {% block headertop %}{% endblock %}
                 <small>
                     {% block headerbottom %}{% endblock %}
                 </small>
-        </h1>
-        {% if app.user %}
-            <div class="row">
+            </h1>
+            {% if app.user %}
                 <h4 class="col-md-4">
                     <div id="HeaderWeather" class="pull-left">
                     </div>
@@ -27,6 +27,7 @@
                 </h1>
             </div>
         {% endif %}
+        </div>
         <div class="clearfix" style="background-color: #FFFFFF;"></div>
     </div>
     {% block layout %}{% endblock %}
