--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -10,19 +10,19 @@
 <body class="{% block theme %}default{% endblock %}">
     <div class="page-header">
         <div class="row">
-            <h1 class="col-md-4">
+            <h1 class="col-md-6">
                 {% block headertop %}{% endblock %}
                 <small>
                     {% block headerbottom %}{% endblock %}
                 </small>
             </h1>
             {% if app.user %}
-                <h4 class="col-md-4">
-                    <div id="HeaderWeather"">
+                <h4 class="col-md-2">
+                    <div id="HeaderWeather">
                     </div>
                 </h4>
                 <h1 class="col-md-4">
-                    <div id="HeaderClock" class="pull-right">
+                    <div id="HeaderClock">
                     </div>
                 </h1>
             </div>
