--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -21,7 +21,7 @@
                     <div id="HeaderWeather">
                     </div>
                 </h4>
-                <h1 class="col-md-4">
+                <h1 class="col-md-4 text-right"">
                     <div id="HeaderClock">
                     </div>
                 </h1>
