Weather text test

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -140,7 +140,7 @@
         
         function updateWeather ( )
             {
-                $("#HeaderWeather").html("WEATHER");
+                $("#HeaderWeather").html("WEATHER text would go heere, not sure how it wraps though");
             }
         $(document).ready(function()
         {
