--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -17,7 +17,7 @@
                 </small>
             </h1>
             {% if app.user %}
-                <h4 class="col-md-3">
+                <h4 class="col-md-3"><br>
                     <div id="HeaderWeather">
                     </div>
                 </h4>
