center weather text

--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -17,7 +17,7 @@
                 </small>
             </h1>
             {% if app.user %}
-                <h5 class="col-md-2"><br>
+                <h5 class="col-md-2 text-center"><br>
                     <div id="HeaderWeather">
                     </div>
                 </h5>
