header text nowrap

--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -10,7 +10,7 @@
 <body class="{% block theme %}default{% endblock %}">
     <div class="page-header">
         <div class="row">
-            <h1 class="col-md-5 text-no-wrap">
+            <h1 class="col-md-5 text-nowrap">
                 {% block headertop %}{% endblock %}
                 <small>
                     {% block headerbottom %}{% endblock %}
