Event lat long debug

--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -36,11 +36,11 @@ Event Entry Form
                         <div class="row">     
                             <div class="form-group">
                                 <div class="col-md-2">  
-                                    {{ form_label(form.latlong) }} 
-                                    {{ form_errors(form.latlong) }}
+                                    {{ form_label(form.event_lat_long) }} 
+                                    {{ form_errors(form.event_lat_long) }}
                                 </div>
                                 <div class="col-md-6">                                     
-                                    {{ form_widget(form.latlong) }}
+                                    {{ form_widget(form.event_lat_long) }}
                                 </div>
                             </div>
                         </div><br>
