Created weather warning system

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -7,7 +7,7 @@
         <br>
         User: {{ app.user.username }}
         <br>
-        <p id="SidebarWeather"></p>
+        Weather: <p id="SidebarWeather"></p>
     </div>
 </div>
 <div class="row">
