--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -150,7 +150,7 @@
                 {
                     $.ajax({
                     type:'POST',
-                    url: '{{ path('event_weather') }}',
+                    url: '{{ path('event_weather_warning') }}',
                     cache: false,
                     global: false,
                     success:function(data)
