danger warning for weather

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -84,7 +84,7 @@
         </div>
         <div class="col-md-3">
             {% if app.user %}
-                <h4>
+                <h4 class="bg-danger">
                     <div id="HeaderWeather" class="bg-danger">
                     </div>
                 </h4>
