--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -85,7 +85,7 @@
         <div class="col-md-3">
             {% if app.user %}
                 <h4 class="bg-danger">
-                    <div id="HeaderWeather" class="bg-danger">
+                    <div id="HeaderWeather" class="text-danger">
                     </div>
                 </h4>
             {% endif %}
