update correct header

--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -84,8 +84,8 @@
         </div>
         <div class="col-md-3">
             {% if app.user %}
-                <h4 class="bg-danger">
-                    <div id="HeaderWeather" class="text-danger">
+                <h4>
+                    <div id="HeaderWeather">
                     </div>
                 </h4>
             {% endif %}
