--- a/app/Resources/views/CtrLogBase.html.twig
+++ b/app/Resources/views/CtrLogBase.html.twig
@@ -17,7 +17,7 @@
                 </small>
             </h1>
                 <h4 class="col-md-3 text-center"><br>
-                    <div id="HeaderWeather">
+                    <div id="HeaderWeather" class="bg-danger">
                     </div>
                 </h4>
                 <h1 class="col-md-4 text-right"">
