--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -2,14 +2,14 @@
     <div class="panel-heading">
         {{ activeEventName(app.user.id) }}
     </div>
-    <div class="panel-body">
+    <div class="panel-body"></div>
         <dl class="dl-horizontal">
             <dt>User:</dt> 
             <dd>{{ app.user.username }}</dd>
             <dt>Weather:</dt>
             <dd id="SidebarWeather"></dd>
         </dl>
-    </div>
+    
 </div>
 <div class="row">
     <h4>Log Functions</h4>
