--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -161,6 +161,7 @@
                             } else {
                                 $('#HeaderWeather').show(500);
                             }
+                            resizeHeader();
                         }
                     });
                 }
