updated sidebar weather

--- a/app/Resources/views/sidebar.twig
+++ b/app/Resources/views/sidebar.twig
@@ -259,7 +259,7 @@
             global: false,
             success:function(data)
                 {
-                    $("#SidebarWeather").html(data);
+                    $("#SidebarWeather").html("<strong>Weather:</strong> "+data);
                 }
             });
         }
