--- a/app/Resources/views/BathSU.html.twig
+++ b/app/Resources/views/BathSU.html.twig
@@ -161,7 +161,10 @@
                             } else {
                                 $('#HeaderWeather').show(500);
                             }
-                            resizeHeader();
+                            setTimeout(function(){
+                                resizeHeader();
+                            }, 600);
+                            
                         }
                     });
                 }
